# rpg_monocular_pose_estimator

monocular_pose_estimator/: CMakeLists.txt  package.xml
monocular_pose_estimator/include/monocular_pose_estimator/: monocular_pose_estimator.h  nodelet.h  stereo_calibrate.h  stereo_pose_estimator.h
monocular_pose_estimator/launch/: kaffee_gun.launch  static_tfs.launch  stereo_kaffee_gun.launch
monocular_pose_estimator/marker_positions/: kaffee_filter_gun.yaml  kaffee_filter_gun.yaml.bk
monocular_pose_estimator/src/: monocular_pose_estimator.cpp  node.cpp  stereo_calibrate.cpp  stereo_node.cpp  stereo_pose_estimator.cpp
monocular_pose_estimator_lib/: CMakeLists.txt  package.xml
monocular_pose_estimator_lib/include/monocular_pose_estimator_lib/: cliques.h  led_detector.h  pose_estimator.h  stereo_pose_estimator.h
monocular_pose_estimator_lib/src/: cliques.cpp  led_detector.cpp  pose_estimator.cpp  stereo_pose_estimator.cpp
